# 2025-04-11-test-project

./: .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/freelancer_analyzer_app/: __main__.py  agent.py  app.py  chat_models.py  config.py  container.py  utils.py
tests/: conftest.py  test_app.py
