[project]
name = "freelancer_analyzer_app"
version = "0.1.0"
description = ""
authors = [
    {name = "Холоднов Эмиль",email = "emil.kholod@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "pandas (>=2.2.3,<2.3.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "dishka (>=1.5.2,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "rich (>=14.0.0,<15.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.isort]
profile = "black"
filter_files = true
line_length = 88
src_paths = "./src"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "DC100", "D100",
]
exclude = [
    ".git",
    "__pycache__",
]
inline-quotes = '"'

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
